--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.container {
+main,
+footer {
     max-width: 1440px;
     width: 80%;
     margin: 0 auto;
@@ -66,6 +67,7 @@ button {
 
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
+    transition: all .5s linear;
 
 }
 
@@ -82,6 +84,7 @@ a {
 
     border: solid 1px #fff;
     border-radius: 50%;
+    transition: all .8s ease-in-out;
 
 }
 
@@ -101,27 +104,32 @@ footer {
 button:hover {
     background-color: hsl(300, 69%, 71%);
     color: #fff;
+    padding: 1em 5em;
 }
 
 .fa-brands:hover {
     border-color: hsl(300, 69%, 71%);
     color: hsl(300, 69%, 71%);
+    padding: .8em;
+
 }
 
-@media (min-width:600px) {
-    .container {
+@media (min-width:800px) {
+
+    main,
+    footer {
         width: 90%;
     }
 
     body {
         background: url(./images/bg-desktop.svg) no-repeat, hsl(257, 40%, 49%);
-        background-size: contain;
+        background-size: cover;
 
     }
 
     header {
-        margin-bottom: 5rem;
-        margin-top: 2.5rem;
+        margin-bottom: 5em;
+        margin-top: 2.5em;
     }
 
     .logo {
@@ -130,7 +138,7 @@ button:hover {
 
     section {
 
-        margin-top: 7.2em;
+        margin-top: 7.5em;
         text-align: left;
     }
 
